# mlflow-ermeson

./: .gitignore  pyproject.toml
mlruns/0/: meta.yaml
mlruns/383713569006769489/: meta.yaml
mlruns/models/fodase/: meta.yaml
mlruns/models/fodase/tags/: estudo
model_churn/: train.py
