[tool.poetry]
name = "mlflow-ermeson"
version = "0.1.0"
description = ""
authors = ["ermesonf <ermeson.freitas@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
